Modification : implémentation d'un score par message par user.